--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               "Jumanji144's Blog"
+tagline:             'Java and C++ developer'
+description:         'I post blogs featuring tutorials on jvm internals and some other things'
+url:                 http://jumanji144.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Justus Garbe
+  url:               https://twitter.com/jumanji1444
+  email:             justus.elias.garbe@gmail.com
 
 # Gems
 plugins:
