--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               "Jumanji144's Blog"
 tagline:             'Java and C++ developer'
 description:         'I post blogs featuring tutorials on jvm internals and some other things'
-url:                 http://jumanji144.github.io
+url:                 https://jumanji144.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
