--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,20 @@ author:
   url:               https://twitter.com/jumanji1444
   email:             justus.elias.garbe@gmail.com
 
+# Jekyll 3 now only supports Kramdown for Markdown
+kramdown:
+  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+  input: GFM
+  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    # Use existing pygments syntax highlighting css
+    css_class: 'highlight'
+
 # Gems
 plugins:
   - jekyll-paginate
 
 # Custom vars
-version:             1.1.0
+version:             1.2.0
 google_analytics_id: #UA-XXXX-Y
